# Capstone_phase3

./: .gitignore  CDO-02_baseline_cluster_runbook.md  CDO-02_cluster_acceptance.md  CDO-02_cluster_deploy_status_2026-07-07.md  CDO-02_phase3_summary.md  CDO-02_pillar_recommendation.md  CDO-02_remaining_folders_guide.md  eksctl-techx-tf3-cluster.yaml
.github/workflows/: build-platform-ecr.yml  build-shipping-ecr.yml
deploy/: build-push-images.sh  build-push-shipping-amd64.sh  shipping-hotfix-configmap.yaml  shipping-hotfix-deployment-patch.yaml  values-flagd-sync.yaml  values-shipping-hotfix.yaml
infra/: .terraform.lock.hcl  GITHUB_ACTIONS_PLATFORM_SETUP.md  README.md  RECREATE_FROM_SCRATCH.md  deploy.ps1  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
techx-corp-platform/: .env.override
techx-corp-platform/src/currency/: CMakeLists.txt  Dockerfile
techx-corp-platform/src/flagd-ui/: Dockerfile
techx-corp-platform/src/flagd-ui/assets/css/: app.css
techx-corp-platform/src/flagd-ui/assets/js/: app.js
